[tool.poetry]
name = "nethra-backend"
version = "0.1.0"
description = "Backend API for nethra"
authors = ["Backend Team"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.27.0"
pydantic = "^2.6.0"
sqlalchemy = "^2.0.45"
asyncpg = "^0.31.0"
geoalchemy2 = "^0.18.1"
pydantic-settings = "^2.12.0"
greenlet = "^3.3.0"
alembic = "^1.18.0"
psycopg2-binary = "^2.9.11"
pyseto = "^1.9.1"
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
